k8s/manifests/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: summer-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: summer-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: summer-app
            port:
              number: 80
